--- a/style.css
+++ b/style.css
@@ -11,3 +11,44 @@ h2 {
     border :solid;
     border-color : blue;
 }
+
+.thumbnail_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.thumbnail{
+    width: 100%;
+
+}
+
+.stat_bar {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-top: 1px solid gray;
+    border-bottom : 1px solid gray;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr    
+}
+
+.stat{
+    text-align: center;
+
+}
+
+.circle_pic{
+    border : solid white 1px;
+    border-radius: 50% ;  
+    width: 100%;
+    height: 100%;
+    object-fit: cover;  
+}
+.highlight_pic{
+    height: 35px;
+    width : 35px;
+}
+  
+#profile_pic{
+    height: 50px;
+    width: 50px;
+} 
+    
