--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     font-size: 3vw;
 }
 
-#top{
+#top{ /* top id 의 css */ 
     display: grid;
     grid-template-columns: 4fr 7fr 4fr;
     height: 10vw;
@@ -18,33 +18,17 @@ body{
     text-align: center;
     padding-top: 3vw;
 }
-#top_img{
+#top_img{ /* top_img id의 css*/
     width: 30vw;
     height: 10vw;
     margin: auto;
-
-
 }
-#top img{
-   width: 100%;
-    height: 100%;
-    object-fit:cover;
-}
-
-
-i{
-    color: gray;
-}
-
-#top i{
-    font-size: 4vw;
-    margin-top: 3vw;
-}
-
-
-
-
-#top input{
+#top img{ /* top id 의 img태그 css */
+    width: 100%;
+     height: 100%;
+     object-fit:cover;
+ }
+#top input{ /* top id 안에 input태그의 css */
     height: 60%;
     width: 95%;
 
@@ -60,21 +44,43 @@ i{
 
 }
 
-#profile{
+
+i{ /* 모든 i태그 css */
+    color: gray;
+}
+
+#top i{ /* top id 안에 i 태그의 관한 css */
+    font-size: 4vw;
+    margin-top: 3vw;
+}
+
+#profile{ /*id profile  css */
     display: grid;
     grid-template-columns: 1fr 3.5fr;
 }
-#profile_info{
+#profile_pic{ /*id profile_pic  css */
+    height: 15vw;
+    width: 15vw;
+} 
+.circle_pic{ /* class cricle_pic css*/
+    border : solid white 1px;
+    border-radius: 50% ;  
+    width: 100%;
+    height: 100%;
+    object-fit: cover;  
+}
+
+#profile_info{ /* id profile_info css */
     display: grid;
     grid-template-rows: 1fr 1fr ;
     
     height: 15vw;
 }
-#id{
+#id{ /* id : id  css */
     font-size: 6vw;
     font-weight: 100;
 }
-button{
+button{ /*button css*/
     height: 80%;
     width: 95%;
     
@@ -83,17 +89,20 @@ button{
     border: solid gray 1px;
     border-radius: 3px;
 }
-
-.thumbnail_grid {
+#highlight_area{ /* id highlight_area*/
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 12vw 12vw 1fr;
 }
-.thumbnail{
-    width: 100%;
-
+.highlight{ /* class highlight */
+    text-align: center;
 }
-
-.stat_bar {
+.highlight_pic{ /* class highlight_pic */
+    height: 10vw;
+    width : 10vw;
+    margin-left: auto ;
+    margin-right: auto;
+}
+.stat_bar { /* class stat_bar */
     margin-top: 5px;
     margin-bottom: 5px;
     border-top: 1px solid gray;
@@ -101,41 +110,10 @@ button{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr    
 }
-
-.stat{
-    text-align: center;
-
-}
-
-.circle_pic{
-    border : solid white 1px;
-    border-radius: 50% ;  
-    width: 100%;
-    height: 100%;
-    object-fit: cover;  
-}
-#profile_pic{
-    height: 15vw;
-    width: 15vw;
-} 
-    
-.highlight_pic{
-    height: 10vw;
-    width : 10vw;
-    margin-left: auto ;
-    margin-right: auto;
-}
-  
-#highlight_area{
-    display: grid;
-    grid-template-columns: 12vw 12vw 1fr;
-}
-
-.highlight{
+.stat{/* class stat */
     text-align: center;
 }
-
- #sub_icons{
+#sub_icons{ /* id sub_icons */ 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
@@ -145,6 +123,16 @@ button{
     height: 8vw;
 } 
 
-.selected{
+.selected{ /* class selected */
     border-bottom: solid gray 3px;
 }
+
+.thumbnail_grid { /* class .thumbnail_grid*/
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.thumbnail{/* class .thumbnail*/
+    width: 100%;
+
+}
+
